--- a/war.html
+++ b/war.html
@@ -18,7 +18,7 @@
     <div id="Mythology Game">
 
         <div id="select-area">
-            <div  class="select">Select Your Character</div>
+            <div class="select">Select Your Character</div>
             <div id="gods"> </div>
         </div>
 
@@ -30,10 +30,28 @@
         </div>
 
 
-      
+        <div id="enemy_attack">
+            <div class="select">Enemies</div>
+        </div>
 
+        <div class="select">Fight</div>
+        <div id="fight-section">
+            <button id="fightbtn" style="display: none;">Fight</button>
+        </div>
 
+        <div id="action">
+            <div class="Enemys">
+                <div class="select">Enemy</div>
 
+                <div id="Enemy"></div>
+            </div>
+        </div>
+
+    </div>
+
+    <div id="Message"></div>
+    <button id="New Game" style="display: none;">New Game</button>
+    
     <!-- Backgroud Sounds -->
 
     <div class=bsound>
@@ -42,7 +60,8 @@
     <div class=bsound>
         <iframe src="assets/sounds/thunder.mp3" allow="autoplay" id="audio" loop></iframe>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
 </body>
 
