--- a/index.html
+++ b/index.html
@@ -7,56 +7,43 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style_index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-   
+
     <title>Mythology Of War</title>
 </head>
 
 <body>
+    <div id="pegasus">
+        <img src="assets/images/pegasus.gif" alt="">
+    </div>
     <!-- Backgroud Image -->
     <img id="page1" src="assets/images/page1.jpg" alt="">
-
-
-    <!-- Logo -->
     <h1 id="logo">Mythology Of War</h1>
-
-   
-
-
-    <div id="caracters">
+    <div id="characters">
         <a href="war.html">
             <img data-toggle="tooltip"
-                title="Zeus is the Olympian god of the sky and the thunder,the king of all other gods and men, and, consequently, the chief figure in Greek mythology.!"
-                id="car1" src="assets/images/zeus.png" alt="Zeus">
+                title="Healt 180 - Zeus is the Olympian god of the sky and the thunder,the king of all other gods and men, and, consequently, the chief figure in Greek mythology.!"
+                id="car1" class="character" src="assets/images/zeus.png" data-name="ZEUS" alt="zeus">
             <img data-toggle="tooltip"
-                title="Poseidon the god of the sea, earthquakes and horses. Although he was officially one of the supreme gods of Mount Olympus, he spent most of his time in his watery domain. Poseidon was brother to Zeus and Hades."
-                id="car2" src="assets/images/poseidon.png" alt="Poseidon">
+                title="Healt 150 - Poseidon the god of the sea, earthquakes and horses. Although he was officially one of the supreme gods of Mount Olympus, he spent most of his time in his watery domain. Poseidon was brother to Zeus and Hades."
+                id="car2" class="character" src="assets/images/posedion.png" data-name="POSEIDON" alt="Poseidon">
             <img data-toggle="tooltip"
-                title=" Hades, the god of the underworld, was the first-born son of the Titans Cronus and Rhea. He had three older sisters, Hestia, Demeter, and Hera, as well as a younger brother, Poseidon, all of whom had been swallowed whole by their father as soon as they were born."
-                id="car3" src="assets/images/hades.png" alt="Hades">
+                title="Healt 140 - Hades, the god of the underworld, was the first-born son of the Titans Cronus and Rhea. He had three older sisters, Hestia, Demeter, and Hera, as well as a younger brother, Poseidon, all of whom had been swallowed whole by their father as soon as they were born."
+                id="car3" class="character" src="assets/images/hades.png" data-name="HADES" alt="hades">
             <img data-toggle="tooltip"
-                title="Ares is the god of war, one of the Twelve Olympian gods and the son of Zeus and Hera. In literature Ares represents the violent and physical untamed aspect of war, which is in contrast to Athena who represents military strategy and generalship as the goddess of intelligence."
-                id="car4" src="assets/images/ares.png" alt="Ares">
+                title="Healt 130 - Ares is the god of war, one of the Twelve Olympian gods and the son of Zeus and Hera. In literature Ares represents the violent and physical untamed aspect of war, which is in contrast to Athena who represents military strategy and generalship as the goddess of intelligence."
+                id="car4" class="character" src="assets/images/ares.png" data-name="ARES" alt="ares">
         </a>
 
     </div>
-<div id=""></div>
+
 
     <!-- Background Sound -->
-
-    <!-- <audio controls autoplay loop>
-        <source src="assets/sounds/intro.mp3" type="audio/ogg">
-        <source src="assets/sounds/intro.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio> -->
-
-    
     <div id=bsound>
         <iframe src="assets/sounds/intro.mp3" allow="autoplay" id="audio" loop></iframe>
-      </div>
+    </div>
 
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
 </body>
 
