--- a/war.html
+++ b/war.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style_war.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  
     <title>Mythology Of War</title>
 </head>
 
@@ -16,41 +16,43 @@
     <img id="page2" src="assets/images/giphy.gif" alt="">
     <h1 id="logo">Mythology Of War</h1>
     <div id="Mythology Game">
+        <!-- God Select -->
 
-        <div id="select-area">
-            <div class="select">Select Your Character</div>
-            <div id="gods"> </div>
+        <div id="select-area" data-toggle="tooltip">
+            <div id="sel" class="select">Select Your Character</div>
+            <div id="gods" > </div>
         </div>
 
+        <!-- Selected God -->
 
         <div id="selected-area">
-            <div class="select">Your Character</div>
-
-            <div id="selected-god"></div>
+            <div id="sel2" class="select">Your Character</div>
+                <div id="selected-god"></div>
         </div>
 
 
-        <div id="enemy_attack">
+        <div id="enemy_fight">
             <div class="select">Enemies</div>
         </div>
 
-        <div class="select">Fight</div>
-        <div id="fight-section">
+        <!-- Fight Button -->
+
             <button id="fightbtn" style="display: none;">Fight</button>
-        </div>
+        
 
         <div id="action">
+            <!-- Enemys Contaniar -->
             <div class="Enemys">
-                <div class="select">Enemy</div>
+                <div id="sel4">Enemy</div>
 
+                    <!-- Fight Enemy -->
                 <div id="Enemy"></div>
             </div>
         </div>
 
     </div>
-
-    <div id="Message"></div>
-    <button id="New Game" style="display: none;">New Game</button>
+                <!-- New Game Button -->
+    <button id="new-game" style="display: none;">New Game</button>
     
     <!-- Backgroud Sounds -->
 
@@ -60,6 +62,9 @@
     <div class=bsound>
         <iframe src="assets/sounds/thunder.mp3" allow="autoplay" id="audio" loop></iframe>
     </div>
+
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
