--- a/index.html
+++ b/index.html
@@ -1,50 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/style_index.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="assets/css/style_index.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
 
     <title>Mythology Of War</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <!-- Pegasus Animation -->
     <div id="pegasus">
-        <img src="assets/images/pegasus.gif" alt="">
+      <img src="assets/images/pegasus.gif" alt="" />
     </div>
     <!-- Backgroud Image -->
-    <img id="page1" src="assets/images/page1.jpg" alt="">
+    <img id="page1" src="assets/images/page1.jpg" alt="" />
     <h1 id="logo">Mythology Of War</h1>
+
+    <!-- Gods -->
     <div id="characters">
-        <a href="war.html">
-            <img data-toggle="tooltip"
-                title="Healt 180 - Zeus is the Olympian god of the sky and the thunder,the king of all other gods and men, and, consequently, the chief figure in Greek mythology.!"
-                id="car1" class="character" src="assets/images/zeus.png" data-name="ZEUS" alt="zeus">
-            <img data-toggle="tooltip"
-                title="Healt 150 - Poseidon the god of the sea, earthquakes and horses. Although he was officially one of the supreme gods of Mount Olympus, he spent most of his time in his watery domain. Poseidon was brother to Zeus and Hades."
-                id="car2" class="character" src="assets/images/posedion.png" data-name="POSEIDON" alt="Poseidon">
-            <img data-toggle="tooltip"
-                title="Healt 140 - Hades, the god of the underworld, was the first-born son of the Titans Cronus and Rhea. He had three older sisters, Hestia, Demeter, and Hera, as well as a younger brother, Poseidon, all of whom had been swallowed whole by their father as soon as they were born."
-                id="car3" class="character" src="assets/images/hades.png" data-name="HADES" alt="hades">
-            <img data-toggle="tooltip"
-                title="Healt 130 - Ares is the god of war, one of the Twelve Olympian gods and the son of Zeus and Hera. In literature Ares represents the violent and physical untamed aspect of war, which is in contrast to Athena who represents military strategy and generalship as the goddess of intelligence."
-                id="car4" class="character" src="assets/images/ares.png" data-name="ARES" alt="ares">
-        </a>
-
+      <a href="war.html">
+        <img
+          data-toggle="tooltip"
+          title="Healt 180 - Zeus is the Olympian god of the sky and the thunder,the king of all other gods and men, and, consequently, the chief figure in Greek mythology.!"
+          id="car1"
+          class="character"
+          src="assets/images/zeus.png"
+          data-name="ZEUS"
+          alt="zeus"
+        />
+        <img
+          data-toggle="tooltip"
+          title="Healt 150 - Poseidon the god of the sea, earthquakes and horses. Although he was officially one of the supreme gods of Mount Olympus, he spent most of his time in his watery domain. Poseidon was brother to Zeus and Hades."
+          id="car2"
+          class="character"
+          src="assets/images/posedion.png"
+          data-name="POSEIDON"
+          alt="Poseidon"
+        />
+        <img
+          data-toggle="tooltip"
+          title="Healt 140 - Hades, the god of the underworld, was the first-born son of the Titans Cronus and Rhea. He had three older sisters, Hestia, Demeter, and Hera, as well as a younger brother, Poseidon, all of whom had been swallowed whole by their father as soon as they were born."
+          id="car3"
+          class="character"
+          src="assets/images/hades.png"
+          data-name="HADES"
+          alt="hades"
+        />
+        <img
+          data-toggle="tooltip"
+          title="Healt 130 - Ares is the god of war, one of the Twelve Olympian gods and the son of Zeus and Hera. In literature Ares represents the violent and physical untamed aspect of war, which is in contrast to Athena who represents military strategy and generalship as the goddess of intelligence."
+          id="car4"
+          class="character"
+          src="assets/images/ares.png"
+          data-name="ARES"
+          alt="ares"
+        />
+      </a>
     </div>
-
 
     <!-- Background Sound -->
-    <div id=bsound>
-        <iframe src="assets/sounds/intro.mp3" allow="autoplay" id="audio" loop></iframe>
+    <div id="bsound">
+      <iframe
+        src="assets/sounds/intro.mp3"
+        allow="autoplay"
+        id="audio"
+        loop
+      ></iframe>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/javascript/game.js"></script>
-</body>
-
+  </body>
 </html>
