Fixed bug win&lose js

--- a/war.html
+++ b/war.html
@@ -62,7 +62,7 @@
         src="assets/sounds/war.mp3"
         allow="autoplay"
         id="audio"
-        loop
+        loop="true"
       ></iframe>
     </div>
     <div class="bsound">
@@ -70,7 +70,7 @@
         src="assets/sounds/thunder.mp3"
         allow="autoplay"
         id="audio"
-        loop
+        loop="true"
       ></iframe>
     </div>
 
